# AegisAgent

./: .clauderules  .cursorrules  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  aegis.db-shm  aegis.db-wal  dashboard-mock.html  docker-compose.dev.yml  docker-compose.yml  index.html  mkdocs.yml  mutants.toml  policies.cedar  release-notes.md  release-please-config.json  requirements-docs.txt  sitemap.xml
.cargo/: config.toml
.claude/: README.md  ecc-tools.json  identity.json  settings.json
.codex/: AGENTS.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  open_issues.json  placeholder_issue_numbers.txt  placeholder_issues.txt
.semgrep/: aegisagent-python.yml  aegisagent-rust.yml
ARCHITECTURE/: index.html
AegisAgent_Agent_Cage/: index.html
AegisAgent_Agent_SOC_Design/: index.html
AegisAgent_Agent_Workflow/: index.html
AegisAgent_Agent_Workforce_Governance/: index.html
bins/aegis-node-sensor/: Cargo.toml
bins/aegis-node-sensor/src/: command_receiver.rs  config.rs  gateway_client.rs  identity.rs  lib.rs  main.rs  shipper.rs  spool.rs
gateway/: Cargo.toml  Dockerfile  deny.toml  policies.cedar  test_cedar.rs
gateway/benches/: audit_batch_benchmark.rs  authorize_benchmark.rs  baseline_canon.json  baseline_receipt_hash.json  evidence_graph_benchmark.rs  policy_eval_benchmark.rs  receipt_hash_benchmark.rs
gateway/benchmarks/: authorize_load.k6.js  authorize_load.sh
gateway/canon/src/: lib.rs
gateway/dashboard/: aegis.css  app.js  index.html
gateway/fuzz/fuzz_targets/: canonical_value_string.rs  canonicalize_json.rs
gateway/migrations/: 0001_baseline.sql  0002_mcp_servers_last_discovery_at.sql  0003_mcp_manifest_snapshots.sql  0005_agent_risk_scores.sql  0006_webhook_subscriptions.sql  0007_api_keys.sql  0011_agent_signing_key.sql  0012_agent_allowed_environments.sql  0014_decisions_trust_chain.sql  0015_graph_query_indexes.sql  0018_fts5_search_index.sql  0020_receipt_signer_key_id.sql
gateway/src/: audit_batch.rs  backtest.rs  baseline.rs  correlate.rs  db.rs  detect.rs  error.rs  events.rs  gh_checks.rs  gh_comment.rs  graph.rs  ingest.rs  jobs.rs  lib.rs  main.rs  mcp_inspect.rs  metrics.rs  models.rs  narrate.rs  notify.rs  policy.rs  qdrant.rs  respond.rs  risk.rs  risk_escalation.rs  routes.rs  rule_dsl.rs  sign.rs  splunk_export.rs  webhook_export.rs
gateway/src/db/: agents.rs  approvals.rs  decisions.rs  mcp.rs  mod.rs  policies.rs  receipts.rs  soc.rs  tenant.rs  test_utils.rs  webhooks.rs
gateway/src/routes/: agents.rs  approval.rs  authorize.rs  authorize_canon.rs  authorize_decision.rs  authorize_receipts.rs  dashboard.rs  graph.rs  mcp.rs  mod.rs  openapi.rs  policy.rs  receipts.rs  soc.rs  tenant.rs  webhooks.rs
lib/api/: Cargo.toml  build.rs
lib/api/proto/: admin.proto  aegis.proto  soc.proto
lib/api/src/: graph.rs  lib.rs  models.rs  records.rs
lib/common/: Cargo.toml
lib/common/src/: budget.rs  errors.rs  hash.rs  lib.rs  metrics.rs
lib/policy/: Cargo.toml  policies.cedar
lib/policy/src/: cedar.rs  compiler.rs  lib.rs  risk.rs  trust_chain.rs  validation.rs
lib/soc/: Cargo.toml
lib/soc/src/: backtest.rs  baseline.rs  correlate.rs  detect.rs  events.rs  ingest.rs  lib.rs  narrate.rs  notify.rs  playbook.rs  qdrant.rs  query.rs  respond.rs  rule_dsl.rs  webhook_export.rs
lib/storage/: Cargo.toml
lib/storage/migrations/: 0001_baseline.sql  0004_policy_versions.sql  0008_detection_rules.sql  0009_audit_events_decision_linkage.sql  0010_policy_audit_log.sql  0013_agent_tool_permissions.sql  0016_tenant_auto_rotate_token.sql  0017_webhook_export_delivery.sql  0019_leader_lock.sql  0021_agent_mtls_cn.sql  0022_soft_delete_policies_mcp_servers.sql  0023_playbooks.sql  0024_approval_effective_call_hash.sql  0025_replay_nonces.sql  0026_agent_runs.sql  0027_runtime_events.sql  0028_control_commands.sql  0029_agent_bans.sql  0030_quarantine_records.sql  0031_sensors.sql
lib/storage/migrations_postgres/: 0001_baseline.sql  0002_pagination_rowid_columns.sql  0003_approval_effective_call_hash.sql  0004_replay_nonces.sql  0005_agent_runs.sql  0006_runtime_events.sql  0007_control_commands.sql  0008_agent_bans.sql  0009_quarantine_records.sql  0010_sensors.sql
lib/storage/src/: audit_batch.rs  lib.rs  risk_escalation.rs  sqlite.rs  tenant_bloom.rs  traits.rs
lib/storage/src/db/: agent_bans.rs  agent_runs.rs  agents.rs  approvals.rs  control_commands.rs  decisions.rs  leader.rs  mcp.rs  mod.rs  playbooks.rs  policies.rs  quarantine.rs  receipts.rs  replay.rs  runtime_events.rs  sensors.rs  soc.rs  tenant.rs  test_utils.rs  webhooks.rs
sdk-python/: README.md  pyproject.toml
sdk-python/aegisagent/: __init__.py  accumulator.py  canon.py  cli.py  client.py  decorator.py  evidence.py  logging.py  py.typed  receipts.py  verify_receipts.py  webhooks.py
sdk-python/tests/: test_approval_expiry.py  test_async_client.py  test_async_protect_tool.py  test_canon_and_scaling.py  test_canonical_action.py  test_cli.py  test_new_features.py  test_receipt_vectors.py  test_receipts.py  test_sdk.py  test_webhooks_and_types.py
src/: Cargo.toml  Dockerfile
src/benches/: authorize_benchmark.rs  baseline.json  canon_benchmark.rs  evidence_graph_benchmark.rs  policy_eval_benchmark.rs  receipt_hash_benchmark.rs
src/benchmarks/: authorize_load.py
src/canon/: Cargo.toml
src/canon/src/: lib.rs
src/dashboard/: aegis.css  app.js  index.html  vis-network.min.js
src/fuzz/: Cargo.toml
src/scripts/: check_bench_regression.py  summarize_mutants.py
src/src/: admission.rs  error.rs  grpc.rs  jobs.rs  lib.rs  main.rs  mtls.rs  otel.rs  policy_watcher.rs  sign.rs
src/src/routes/: agents.rs  approval.rs  authorize.rs  authorize_canon.rs  authorize_decision.rs  authorize_receipts.rs  control.rs  dashboard.rs  graph.rs  mcp.rs  mod.rs  openapi.rs  playbook.rs  policy.rs  receipts.rs  runtime.rs  sensors.rs  soc.rs  tenant.rs  webhooks.rs
ui/: README.md  (+3 more)
(+361 files in other folders)
