[package]
name = "gateway"
version = "0.1.0"
edition = "2021"
description = "AegisAgent gateway — fail-closed approval integrity, deterministic trust-provenance gating, and verifiable action receipts for AI agent actions"
license = "MIT"
repository = "https://github.com/lavkushry/AegisAgent"
readme = "../README.md"
publish = false

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
tokio = { version = "1.38", features = ["full"] }
sqlx = { version = "0.9.0", features = ["runtime-tokio", "sqlite", "uuid", "chrono", "json"] }
cedar-policy = "4.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
