[package]
name = "gateway"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
description = "AegisAgent gateway — fail-closed approval integrity, deterministic trust-provenance gating, and verifiable action receipts for AI agent actions"
license = "MIT"
repository = "https://github.com/lavkushry/AegisAgent"
readme = "../README.md"
publish = false

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
tokio = { version = "1.38", features = ["full"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite", "uuid", "chrono", "json"] }
cedar-policy = "3.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
# Optional Ed25519 receipt signing — third-party-verifiable evidence over the
# existing receipt_hash. Hermetic default is unsigned (no key configured). The
# "std" feature gives us deterministic signing from a parsed secret key; no rng
# is required at runtime (keys are provisioned out-of-band as hex).
ed25519-dalek = { version = "=2.1.1", default-features = false, features = ["std"] }
hex = "=0.4.3"
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls", "json"] }
