[package]
name = "gateway"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
description = "AegisAgent gateway — fail-closed approval integrity, deterministic trust-provenance gating, and verifiable action receipts for AI agent actions"
license = "MIT"
repository = "https://github.com/lavkushry/AegisAgent"
readme = "../README.md"
publish = false

[dependencies]
# aegis-jcs-1 canonicalization (TEST-002, #1162): shared with the cargo-fuzz
# targets in fuzz/ via this path dependency.
aegis-canon = { path = "canon" }
axum = { version = "0.7.5", features = ["macros", "ws"] }
tokio = { version = "1.38", features = ["full"] }
sqlx = { version = "0.8.1", features = ["runtime-tokio", "sqlite", "uuid", "chrono", "json"] }
cedar-policy = "3.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
# GitHub webhook signature verification (X-Hub-Signature-256, #1339).
# `Mac::verify_slice` performs a constant-time comparison.
hmac = "0.12"
# Optional Ed25519 receipt signing — third-party-verifiable evidence over the
# existing receipt_hash. Hermetic default is unsigned (no key configured). The
# "std" feature gives us deterministic signing from a parsed secret key; no rng
# is required at runtime (keys are provisioned out-of-band as hex).
ed25519-dalek = { version = "=2.1.1", default-features = false, features = ["std"] }
hex = "=0.4.3"
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls", "json"] }
tower-http = { version = "0.5", features = ["cors", "request-id", "propagate-header", "set-header", "util", "compression-full", "limit", "timeout", "catch-panic"] }
tower = { version = "0.4", features = ["util"] }
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
# Tool-identifier normalization (#1335): both already present transitively
# (axum -> form_urlencoded -> percent-encoding; cedar-policy-validator ->
# unicode-security -> unicode-normalization). Promoted to direct deps with
# their existing locked versions — no new supply-chain surface.
percent-encoding = "2.3.2"
unicode-normalization = "0.1.25"
# Compliance Evidence Pack export (#1298): in-memory ZIP construction for
# GET /v1/compliance/evidence-pack.
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tokio-tungstenite = "0.21"
futures-util = "0.3"
# TASK-1313: end-to-end /v1/authorize criterion benchmark. `async_tokio`
# enables `Bencher::to_async`/`iter` against a `tokio::runtime::Runtime` so we
# can benchmark the real (async) `authorize_action` handler.
criterion = { version = "0.5", features = ["async_tokio"] }
tempfile = "3.10"

[[bench]]
name = "authorize_benchmark"
harness = false

[[bench]]
name = "policy_eval_benchmark"
harness = false
