[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aegisagent"
version = "0.1.0"
description = "AegisAgent Python SDK for secure tool interception and governance"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
    "opentelemetry-api>=1.15.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["aegisagent*"]
