[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aegisagent"
version = "0.1.0"
description = "AegisAgent Python SDK — fail-closed approval integrity and trust-provenance for AI agent actions"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [{ name = "Lavkush Kumar" }]
keywords = ["ai-agents", "security", "authorization", "approval-integrity", "mcp", "cedar"]
dependencies = [
    "requests>=2.25.0",
    "opentelemetry-api>=1.15.0",
]

[project.optional-dependencies]
# black 26.x requires Python >=3.10; pin a 3.9-compatible release there so the
# 3.9 CI leg can install the [dev] extra. The `black --check` only runs on 3.12,
# which keeps 26.5.1 — so formatting enforcement is unchanged.
dev = [
    "black==26.5.1; python_version >= '3.10'",
    "black==25.11.0; python_version < '3.10'",
]

[project.urls]
Homepage = "https://github.com/lavkushry/AegisAgent"
Repository = "https://github.com/lavkushry/AegisAgent"
Issues = "https://github.com/lavkushry/AegisAgent/issues"

[project.scripts]
aegis-verify-receipts = "aegisagent.verify_receipts:main"
aegis-status = "aegisagent.cli:status_main"
aegis-freeze-agent = "aegisagent.cli:freeze_agent_main"
aegis-export-audit = "aegisagent.cli:export_audit_main"

[tool.setuptools.packages.find]
where = ["."]
include = ["aegisagent*"]

[tool.black]
line-length = 88
target-version = ["py38"]
