[package]
name = "gateway"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
description = "AegisAgent gateway — fail-closed approval integrity, deterministic trust-provenance gating, and verifiable action receipts for AI agent actions"
license = "MIT"
repository = "https://github.com/lavkushry/AegisAgent"
readme = "../README.md"
publish = false

[dependencies]
# aegis-jcs-1 canonicalization (TEST-002, #1162): shared with the cargo-fuzz
# targets in fuzz/ via this path dependency.
aegis-canon = { path = "canon" }
aegis-common = { path = "../lib/common" }
aegis-api = { path = "../lib/api" }
aegis-storage = { path = "../lib/storage" }
aegis-policy = { path = "../lib/policy" }
aegis-soc = { path = "../lib/soc" }
tonic = "0.12.3"
prost = "0.13.5"
axum = { version = "0.7.5", features = ["macros", "ws"] }
tokio = { version = "1.38", features = ["full"] }
sqlx = { version = "0.8.1", features = ["runtime-tokio", "sqlite", "uuid", "chrono", "json"] }
cedar-policy = "3.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# YAML detection rule DSL (#1282) — deserialize-only, no custom tags.
serde_yml = "0.0.12"
sha2 = "0.10"
# GitHub webhook signature verification (X-Hub-Signature-256, #1339).
# `Mac::verify_slice` performs a constant-time comparison.
hmac = "0.12"
# Optional Ed25519 receipt signing — third-party-verifiable evidence over the
# existing receipt_hash. Hermetic default is unsigned (no key configured). The
# "std" feature gives us deterministic signing from a parsed secret key; no rng
# is required at runtime (keys are provisioned out-of-band as hex).
ed25519-dalek = { version = "=2.2.0", default-features = false, features = ["std"] }
hex = "=0.4.3"
uuid = { version = "1.8", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls", "json"] }
tower-http = { version = "0.5", features = ["cors", "request-id", "propagate-header", "set-header", "util", "compression-full", "limit", "timeout", "catch-panic"] }
tower = { version = "0.4", features = ["util", "load-shed", "limit"] }
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
# Tool-identifier normalization (#1335): both already present transitively
# (axum -> form_urlencoded -> percent-encoding; cedar-policy-validator ->
# unicode-security -> unicode-normalization). Promoted to direct deps with
# their existing locked versions — no new supply-chain surface.
percent-encoding = "2.3.2"
unicode-normalization = "0.1.25"
# Compliance Evidence Pack export (#1298): in-memory ZIP construction for
# GET /v1/compliance/evidence-pack.
zip = { version = "2", default-features = false, features = ["deflate"] }
# SSE watch-mode streams (#1146): `stream::unfold` adapts an mpsc::Receiver
# into a Stream for axum's `Sse` response, without pulling in tokio-stream as
# a second stream-adapter crate. Already present as a transitive dependency
# (and previously a direct dev-dependency for WS tests) — promoted to a
futures-util = "0.3"
qdrant-client = "=1.18.0"
fastembed = { version = "4", optional = true }
utoipa = { version = "4.2", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }
tokio-rustls = "0.26"
rustls-pemfile = "2.2"
rustls-pki-types = "1.14"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
hyper-util = { version = "0.1", features = ["server", "server-auto", "tokio"] }
hyper = { version = "1.0", features = ["server"] }
# Agent-to-gateway mTLS (#1310): extracts the Subject CN from a verified
# client certificate so it can be mapped to an agent identity.
x509-parser = "0.18"
# Distributed tracing (#1156), gated on AEGIS_OTLP_ENDPOINT — unset, this is
# entirely inert (no exporter built, no extra layer registered, existing
# json/EnvFilter logging unchanged). The HTTP/protobuf exporter is used
# instead of `grpc-tonic` so export goes over a plain HTTP POST rather than
# pulling in a second `tonic` major version alongside the one already used
# for gateway<->gateway gRPC. `reqwest-blocking-client` (the crate's own
# default), not `reqwest-client` — `SdkTracerProvider`'s batch processor
# runs its own dedicated OS thread, not a tokio task, so an async client
# would panic with "no reactor running"; the blocking client is exactly
# what that thread needs and doesn't block the gateway's own async runtime.
opentelemetry = "0.32.0"
opentelemetry_sdk = "0.32.1"
opentelemetry-otlp = { version = "0.32.0", default-features = false, features = ["http-proto", "reqwest-blocking-client"] }
# `HeaderExtractor` — pulls the W3C `traceparent` context out of an
# axum/http `HeaderMap` so a span can be parented to the SDK caller's trace.
opentelemetry-http = "0.32.0"
tracing-opentelemetry = "0.33.0"


[features]
default = []
local-embeddings = ["dep:fastembed"]
# #1192: database encryption at rest (SQLCipher). Compile-time, since it
# swaps the linked SQLite library for the SQLCipher amalgamation — see
# lib/storage/Cargo.toml for why this can't be a pure runtime toggle.
sqlcipher = ["aegis-storage/sqlcipher"]

[dev-dependencies]
aegis-storage = { path = "../lib/storage", features = ["test-utils"] }
tokio-tungstenite = "0.21"
# TASK-1313: end-to-end /v1/authorize criterion benchmark. `async_tokio`
# enables `Bencher::to_async`/`iter` against a `tokio::runtime::Runtime` so we
# can benchmark the real (async) `authorize_action` handler.
criterion = { version = "0.5", features = ["async_tokio"] }
tempfile = "3.10"
# TEST-003 (#1163): property-based tests for receipt chain integrity.
proptest = "1"
# mTLS (#1310): generates throwaway CA/leaf certs in unit tests without
# shelling out to openssl.
rcgen = "0.14"

[[bench]]
name = "authorize_benchmark"
harness = false

[[bench]]
name = "policy_eval_benchmark"
harness = false

[[bench]]
name = "audit_batch_benchmark"
harness = false

[[bench]]
name = "evidence_graph_benchmark"
harness = false

[[bench]]
name = "canon_benchmark"
harness = false

[[bench]]
name = "receipt_hash_benchmark"
harness = false
