[package]
name = "aegis-node-sensor"
version = "0.1.0"
edition = "2021"
description = "AegisAgent runtime sensor: local telemetry capture and signed command enforcement, deliberately kept out of the gateway process."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4.6", features = ["derive"] }
toml = "0.8"
url = "2.5"
hex = "0.4"
rand = "0.8"
ed25519-dalek = { version = "=2.2.0", default-features = false, features = ["std"] }
thiserror = { workspace = true }
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls", "json"] }
hostname = "0.4"
crc32fast = "1.4"

[dev-dependencies]
tempfile = "3.10"
axum = { workspace = true }
