[package]
name = "aegis-api"
version = "0.1.0"
edition = "2021"

[dependencies]
aegis-common = { path = "../common" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
utoipa = { workspace = true }
tonic = "0.12.3"
prost = "0.13.5"
sqlx = { workspace = true }

[build-dependencies]
tonic-build = "0.12.3"
