[package]
name = "aegis-canon"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
description = "AegisAgent aegis-jcs-1 JSON canonicalization (key sort + compact separators), shared by the gateway and its fuzz targets"
license = "MIT"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
